--- a/Senior_Weka_Dancing_Battle/Senior_Weka_Dancing_Battle.vcxproj
+++ b/Senior_Weka_Dancing_Battle/Senior_Weka_Dancing_Battle.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="Battle.cpp" />
     <ClCompile Include="ConReader.cpp" />
     <ClCompile Include="Initial_val_mapper.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="RangeSearch.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Test.cpp" />
@@ -158,7 +159,6 @@
     <ClInclude Include="Battle.h" />
     <ClInclude Include="ConReader.h" />
     <ClInclude Include="Initial_val_mapper.h" />
-    <ClInclude Include="main.h" />
     <ClInclude Include="RangeSearch.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
