--- a/Senior_Weka_Dancing_Battle/Senior_Weka_Dancing_Battle.vcxproj
+++ b/Senior_Weka_Dancing_Battle/Senior_Weka_Dancing_Battle.vcxproj
@@ -92,6 +92,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <StackReserveSize>4194304</StackReserveSize>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
