--- a/Senior_Weka_Dancing_Battle/Senior_Weka_Dancing_Battle.vcxproj
+++ b/Senior_Weka_Dancing_Battle/Senior_Weka_Dancing_Battle.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="Battle.cpp" />
     <ClCompile Include="ConReader.cpp" />
     <ClCompile Include="Initial_val_mapper.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="RangeSearch.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Test.cpp" />
