--- a/Senior_Weka_Dancing_Battle/Senior_Weka_Dancing_Battle.vcxproj.filters
+++ b/Senior_Weka_Dancing_Battle/Senior_Weka_Dancing_Battle.vcxproj.filters
@@ -35,6 +35,9 @@
     <ClCompile Include="RangeSearch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConReader.h">
